Fix people search filter overlap on mobile (#1844)

--- a/sitemedia/scss/pages/_people.scss
+++ b/sitemedia/scss/pages/_people.scss
@@ -15,17 +15,17 @@ main.people {
     // header row
     .topheader-row {
         display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        justify-content: space-between;
+        flex-flow: column;
         width: 100%;
         gap: 0.75rem;
         @include breakpoints.for-tablet-landscape-up {
+            flex-flow: row nowrap;
+            justify-content: space-between;
+            align-items: center;
             gap: 2rem;
         }
         fieldset#query {
             flex-grow: 1;
-            margin-right: 5.75rem;
             @include breakpoints.for-tablet-landscape-up {
                 margin-left: 8rem;
                 margin-right: 0;
